quelques modifications de readme

--- a/src/styles/charts/Counter.css
+++ b/src/styles/charts/Counter.css
@@ -17,7 +17,7 @@ p, h3 {
 .counter_icon_cell {
     width: 258px;
 	height: 124px;
-    background-color: #f4f4f4;
+    background-color: #fbfbfb;
     display: flex;
     margin-bottom: 37px;
     border-radius: 5px;
